concord_macros/tests/trybuild/fail/pagination/custom_pagination_requires_endpoint_state.stderr
error: custom pagination must use `paginate endpoint_state Controller bindings Bindings { ... }`
  --> tests/trybuild/fail/pagination/custom_pagination_requires_endpoint_state.rs:12:18
   |
12 |         paginate HeaderCursorPagination
   |                  ^^^^^^^^^^^^^^^^^^^^^^
